# BM1422AGMV-ZE2

./: README.md  bluetooth_receiver.py  haarukointi.py  live_plot.py  magnet_holder.scad  magnetic_position.nb  record.c  show_fft.py  sine.cpp  test_magnetometer.py
amplitude_to_position/: Cargo.toml
amplitude_to_position/src/: illustrate.rs  interface.rs  main.rs  octtree.rs  slicer.rs
client/: bluetooth_receiver.py  default.nix  run.sh
client/haarukointi/: Cargo.toml
client/haarukointi/src/: main.rs
haarukointi/: Cargo.toml  config.ron
magnetometer_over_bluetooth/: frequency_extraction.h  frequency_extraction_test.cpp  magnetometer.h  magnetometer_over_bluetooth.ino  main.cpp
magnetometer_peripheral/: field_strength.h  frequency_extraction.h  magnetometer_peripheral.ino  main.cpp  reading.h
magnetometrisormi/: fp-lib-table  magnetometrisormi-B_Cu.gbr  magnetometrisormi-B_Mask.gbr  magnetometrisormi-B_Paste.gbr  magnetometrisormi-B_SilkS.gbr  magnetometrisormi-Edge_Cuts.gbr  magnetometrisormi-F_Cu.gbr  magnetometrisormi-F_Mask.gbr  magnetometrisormi-F_Paste.gbr  magnetometrisormi-F_SilkS.gbr  magnetometrisormi-NPTH.drl  magnetometrisormi-PTH.drl  magnetometrisormi-all.pos  magnetometrisormi-bottom.pos  magnetometrisormi-cache.lib  magnetometrisormi-top.pos  magnetometrisormi.csv  magnetometrisormi.kicad_pcb  magnetometrisormi.kicad_pcb-bak  magnetometrisormi.net  magnetometrisormi.pro  magnetometrisormi.sch  magnetometrisormi.sch-bak  magnetometrisormi_centroid.txt  magnetometrisormi_pyöristetty-B_Cu.gbr  magnetometrisormi_pyöristetty-B_Mask.gbr  magnetometrisormi_pyöristetty-B_SilkS.gbr  magnetometrisormi_pyöristetty-Edge_Cuts.gbr  magnetometrisormi_pyöristetty-F_Cu.gbr  magnetometrisormi_pyöristetty-F_Mask.gbr  magnetometrisormi_pyöristetty-F_SilkS.gbr  magnetometrisormi_pyöristetty-NPTH.drl  magnetometrisormi_pyöristetty.csv  (+5 more)
(+14 files in other folders)
