[package]
name = "amplitude_to_position"
version = "0.1.0"
authors = ["Joonatan Saarhelo <joon.saar@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.21"
quickcheck = "0.9"
rand = "*"
rand_distr = "*"

[dev-dependencies]
quickcheck_macros = "*"
float-cmp = "0.8"
nalgebra = { version = "0.21", features = ["arbitrary"] }
