[package]
name = "amplitude_to_position"
version = "0.1.0"
authors = ["Joonatan Saarhelo <joon.saar@gmail.com>"]
edition = "2018"
default-run = "amplitude_to_position"

[dependencies]
nalgebra = "0.27"
quickcheck = "0.9"
rand = "*"
rand_distr = "*"
float-ord = "0.2"

[dev-dependencies]
quickcheck_macros = "*"
float-cmp = "0.8"
nalgebra = { version = "0.27", features = ["arbitrary"] }

[[bin]]
name = "illustrate"
path = "src/illustrate.rs"
